--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,6 +1,6 @@
 <div class="quizz__container">
   <div class="quizz_logo">
-    <img src="img.buzz/logo.png.png" alt="" srcset="" />
+    <img src="img.buzz/logo.png.png" alt=" srcset=" />
     <h3>{{ title }}</h3>
   </div>
 
@@ -9,7 +9,13 @@
   </div>
 
   <div class="quizz_options">
-    <button class="btn-option">optionname</button>
+    <button
+      *ngFor="let option of questionSelected.options; let &quot;i-index&quot;"
+      class="btn-option"
+    >
+      (click)=playerChoose(option.alias)
+      {{ option.name }}
+    </button>
   </div>
 
   <div *ngIf="finished" class="quizz_results">
