--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,25 +1,25 @@
 <div class="quizz__container">
   <div class="quizz_logo">
-    <img src="img.buzz/logo.png.png" alt=" srcset=" />
+    <img src="../../../assets/imgs/logo.png" alt=" srcset=" />
     <h3>{{ title }}</h3>
   </div>
 
-  <div class="quizz_questions">
+  <div *ngIf="!finished" class="quizz_questions">
     <h3>{{ questionSelected.question }}</h3>
   </div>
 
-  <div class="quizz_options">
+  <div *ngIf="!finished" class="quizz_options">
     <button
       *ngFor="let option of questionSelected.options; let &quot;i-index&quot;"
       class="btn-option"
+      (click)="playerChoose(option.alias)"
     >
-      (click)=playerChoose(option.alias)
       {{ option.name }}
     </button>
   </div>
 
   <div *ngIf="finished" class="quizz_results">
     <h1>O Seu resultado é:</h1>
-    <p>Resposta selecionada</p>
+    <p>{{ answersSelected }}</p>
   </div>
 </div>
